# awesome-bugs

./: .gitignore  .rultor.yml  CMakeLists.txt  README.md  README_template.md  coverity.csv  global_filters.txt  hits.json  misses.json  not_found.json  run-no-install.sh  run.sh  samples_parameters.json
.config/pycodestyle/: setup.cfg
.github/workflows/: main.yml
Tests/DivisionByZero/: ArgumentCount.java  ArgumentsCount.java  CastFloatToInt.java  EnumWithValuesZeroDevision.java  InheritedDefaultZeroDivision.java  OverloadingAndStringTrim.java  OverridingZeroWithValue.java  _ifStatementDivison.java  ifStatementDivison.java
Tests/MutualRecursion/: DerivedAgainExample.cpp  DerivedAgainExample.eo  DerivedAgainExample2.cpp  DerivedAgainExample2.eo  DerivedAgainExample3.cpp  DerivedAgainExample4.cpp  DerivedAgainExample4.eo  DerivedBaseClassFromInterfaces.cpp  Factory.cpp  LongChainOfCall.cpp  MultipleInheritanceCase.cpp  MutualRecursionExample.cpp  MutualRecursionExample.eo  MutualRecursionExample_good.cpp  SimpleDifferentSignatures2_good.cpp  SimpleDifferentSignatures_good.cpp  SimpleWithBranching&Random.cpp  SimpleWithBranching&Random_good.cpp  SimpleWithBranchingIf.cpp  SimpleWithBranchingIf2.cpp  SimpleWithBranchingPlusRandom.cpp  SimpleWithBranchingPlusRandom_good.cpp  SimpleWithBranchingSwitch.cpp  SimpleWithBranching_good.cpp  SimpleWithStruct.cpp  SimpleWithTryCatch&IO.cpp  SimpleWithTryCatch.cpp  SimpleWithTryCatchPlusIO.cpp  StructOverrideStaticCRTP.cpp
code/TS1_DivisionByZero/: ArgumentsCount.cpp  OverridingWithZero.java  SimpleDivision.java
code/TS2_RecursiveCall/: README.md
code/TS7_InfiniteLoopAndRecursion/: DerivedAgainExample2.cpp  DerivedAgainExample3.cpp  Factory.java  MainMethodRecursiveCall.java  TwoDerived.cpp  TwoDerivedExplicitDecoration.java
code/TestSuite2/: README.md
code/test/: README.md
docs/: Useful_sources.md  taxonomy_of_defects.md
res/: coverity.xlsx
results/report/: references.bib  report-template.tex
scripts/: LICENSE.md  Pipfile  README.md  analyzer_report.py  analyzer_report_checker.py  analyzer_results.py  analyzer_results_checker.py  checker.py  coverity_parser.py  filters.py  format_checker.py  parameters_parser.py  parser.py  pyproject.toml  report_parser.py  requirements.txt  run-clang-tidy.py  setup.cfg  setup.py  test_analyzer_results_validator.py  test_dirs_structure.py
scripts/report_parsers/: __init__.py  base_parser.py  clang_tidy_parser.py  coverity_parser.py
scripts/src/: utilities.py
scripts/src/SVF/: __main__.py
scripts/src/analyze_reports/: __init__.py  __main__.py  checks.py  filters.py  report.py  report_generator.py
scripts/src/build_sources/: __main__.py
scripts/src/check_format/: __main__.py  parameters_parser.py
scripts/src/clang_tidy/: __main__.py
scripts/src/cmake/: __main__.py
scripts/src/cppcheck/: __main__.py
scripts/src/j2eo/: __main__.py
scripts/src/polystat/: __main__.py
scripts/src/prepare_files/: __main__.py
scripts/src/report_parsers/: SVF_parser.py  __init__.py  base_parser.py  clang_tidy_parser.py  coverity_parser.py  cppcheck_parser.py  polystat_j2eo_parser.py  polystat_parser.py  spotbugs_parser.py
scripts/src/source_files_extractor/: __main__.py
scripts/src/spotbugs/: __main__.py
scripts/src/util/source2yml/: __main__.py
scripts/tests/: test_dirs_structure.py
tests/: errors.txt
tests/MutualRecursion/: MutualRecursionExample.yml
tests/arrayOutOfBound/: array-out-of-bound-base.yml
tests/directStateAccess/: direct-state-access-read-in-calculation-chain-2.yml  direct-state-access-read-in-calculation-chain.yml  direct-state-access-read-in-factory.yml  direct-state-access-read-in-inheritance-chain.yml  direct-state-access-read-inheritance-chain-nested-1.yml  direct-state-access-read-inheritance-chain-nested-2.yml  direct-state-access-read-inheritance-chain-nested.yml  direct-state-access-read-nested-class-1.yml  direct-state-access-read-nested-class-2.yml  direct-state-access-read-non-primitive-data.yml  direct-state-access-read-simple-1.yml  direct-state-access-read-simple-2.yml  direct-state-access-write-in-factory.yml  direct-state-access-write-in-inheritance-chain.yml  direct-state-access-write-inheritance-chain-nested-1.yml  (+8 more)
(+289 files in other folders)
